[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Character Select.gd" type="Script" id=1]
[ext_resource path="res://textures/legoshitaro.png" type="Texture" id=2]
[ext_resource path="res://textures/sam.png" type="Texture" id=3]
[ext_resource path="res://textures/readyc.png" type="Texture" id=4]
[ext_resource path="res://textures/babosa.png" type="Texture" id=5]
[ext_resource path="res://textures/Legoshitaro_icon.png" type="Texture" id=6]
[ext_resource path="res://textures/Babosa_icon.png" type="Texture" id=7]
[ext_resource path="res://textures/Sam_icon.png" type="Texture" id=8]
[ext_resource path="res://textures/mini czim.png" type="Texture" id=9]
[ext_resource path="res://logo.png" type="Texture" id=10]
[ext_resource path="res://textures/czim-full.png" type="Texture" id=11]
[ext_resource path="res://textures/ready.png" type="Texture" id=12]
[ext_resource path="res://fonts/SAns.tres" type="DynamicFont" id=13]

[node name="Character Select" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = -62.0
margin_top = -80.0
margin_right = 1102.0
margin_bottom = 718.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="CanvasLayer/Panel"]
modulate = Color( 0.137255, 0.133333, 0.0941176, 1 )
position = Vector2( 650.612, 414.716 )
scale = Vector2( 1.11646, 1.10102 )
texture = ExtResource( 10 )

[node name="Icon_1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 93.0004, 507.002 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="Icon_2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 266.001, 507.002 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Icon_3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 439.114, 507.002 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="sam" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 230, 210 )
scale = Vector2( -0.2, 0.2 )
texture = ExtResource( 3 )

[node name="legoshitaro" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 230, 210 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="babosa" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 230, 210 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="babosa2" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 790, 210 )
scale = Vector2( -0.2, 0.2 )
texture = ExtResource( 5 )

[node name="sam2" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 790, 210 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="legoshitaro2" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 790, 210 )
scale = Vector2( -0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Button" type="TextureButton" parent="CanvasLayer"]
margin_left = 410.0
margin_top = 200.339
margin_right = 610.0
margin_bottom = 250.339
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label1" type="Label" parent="CanvasLayer"]
margin_left = 400.0
margin_top = 140.0
margin_right = 520.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 500.0
margin_top = 300.0
margin_right = 620.0
margin_bottom = 340.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon_4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 620, 507.5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="czim" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 230, 210 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="czim2" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 790, 210 )
scale = Vector2( -0.2, 0.2 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 442.298
margin_top = 81.4134
margin_right = 579.298
margin_bottom = 146.413
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0.937255, 0.882353, 0.694118, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "NÂº of rounds:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Label"]
margin_left = -28.4357
margin_top = 36.5428
margin_right = 27.5643
margin_bottom = 78.5428
custom_fonts/font = ExtResource( 13 )
custom_constants/check_vadjust = 0
text = "1"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="CanvasLayer/Label"]
margin_left = 37.2586
margin_top = 39.9254
margin_right = 85.2586
margin_bottom = 78.9254
custom_fonts/font = ExtResource( 13 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="CanvasLayer/Label"]
margin_left = 99.5784
margin_top = 39.8062
margin_right = 154.578
margin_bottom = 79.8062
custom_fonts/font = ExtResource( 13 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Label/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="CanvasLayer/Label/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="CanvasLayer/Label/CheckBox3" to="." method="_on_CheckBox3_pressed"]
